infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test-srv
                port:
                  number: 3000
    - host: todo.com
      http:
        paths:
          - path: /?(.*)
            pathType: Exact
            backend:
              service:
                name: test-client-srv
                port:
                  number: 80
